crates/top/re_viewer/tests/integration/snapshots/integration__all_component_fallbacks__arch_fallback_rerun.archetypes.Boxes2D.snap
---
source: crates/top/re_viewer/tests/integration/all_component_fallbacks.rs
expression: arch_display
---
half_sizes: [[1.0, 1.0]]
centers: [[0.0, 0.0]]
colors: [3161148927]
radii: [-1.5]
labels: []
show_labels: [true]
draw_order: [10.0]
class_ids: [0]
