crates/top/re_viewer/tests/integration/snapshots/integration__all_component_fallbacks__arch_fallback_rerun.archetypes.Capsules3D.snap
---
source: crates/top/re_viewer/tests/integration/all_component_fallbacks.rs
expression: arch_display
---
lengths: [1.0]
radii: [-1.5]
translations: [[0.0, 0.0, 0.0]]
rotation_axis_angles: [{axis: [1.0, 0.0, 0.0], angle: 0.0}]
quaternions: [[0.0, 0.0, 0.0, 1.0]]
colors: [3161148927]
line_radii: [-1.5]
fill_mode: [4]
labels: []
show_labels: [true]
class_ids: [0]
